# wish_bot

./: .env  .gitignore  README.md  api_functions.py  bot.py  command_handlers.py  db.py  docker-compose.yml  models.py  poller.Dockerfile  poller.py  pyproject.toml  services.py  setup.py  worker.py
deploy/: worker.Dockerfile
models/: database.py  rabbit.py  telegram.py
poller/: api_functions.py  api_models.py  main.py
worker/: main.py
