[tool.poetry]
name = "wish_bot"
version = "0.1.0"
description = ""
authors = ["mrtedn21 <bezgin.sasha06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
